--- a/thesis/thesis/thesis.tex
+++ b/thesis/thesis/thesis.tex
@@ -87,12 +87,11 @@ Dr. R.G.F. \textsc{Winkels}\\
 \clearpage
 
 \begin{abstract}
-This work aims to store stories in a database, learn the properties of story
-actions, in such a way that they can be used to generate new stories. When
-trained on two fairy tales (``The Frog Prince'' and ``Caliph Stork'') it was able to capture the rules of the stories and was
-able to generalize over multiple occurences of the same event type in different
-stories (in this case, magical transformation from animal to human and vice
-versa).
+This work aims to develop a representation of stories, to facilitate learning the structure of stories, in
+such a way that these existing stories can be used to generate new stories. When trained on two fairy tales
+(“The Frog Prince” and “Caliph Stork”) the program was able to capture the rules of the stories and was
+able to generalize over multiple occurences of the same event type in different stories (in this case, magical
+transformation from animal to human and vice versa).
 \end{abstract}
 
 \input{sections/intro.tex}
